# OverwatchStatsMCP

./: .gitignore  OPENCLAW_SETUP.md  README.md  alembic.ini  db.py  docker-compose.yml  generate_scoreboard.py  heroes.txt  main.py  maps.txt  migrate_normalize_names.py  models.py  overwatch-stats-mcp.service.example  pyproject.toml  webhook.py  webhook_prompt.j2.example
alembic/: env.py
alembic/versions/: 6d4aa875920d_change_match_files_size_to_bigint.py  a0b1c2d3e4f5_add_rank_updates_table.py  a1b2c3d4e5f6_add_notes_backfill_screenshots.py  a3b4c5d6e7f8_add_rank_and_wide_match_fields.py  a9b0c1d2e3f4_add_match_files.py  b0c1d2e3f4a5_add_has_attachments_to_matches.py  b1c2d3e4f5a6_add_users_and_multi_user_support.py  b4c5d6e7f8a9_add_joined_at_to_player_stats.py  b7e8f9a0c1d2_add_player_notes.py  c5d6e7f8a9b0_add_is_teammate_and_banned_heroes.py  c8f9a1b2d3e4_add_player_title.py  d11c7c62595c_add_hero_sr_updates_table.py  d2bd68ad3937_add_oauth_persistence_tables.py  d6e7f8a9b0c1_add_swap_snapshots_to_player_stats.py  d9e0f1a2b3c4_add_hero_to_player_stats.py  e1f2a3b4c5d6_add_scoreboard_urls_to_matches.py  (+5 more)
docs/: client-upload.md  google-oauth-setup.md  tusd-setup.md
scripts/: export_data.py  import_data.py  test_auth.py
src/: admin.py  auth.py  db.py  main.py  models.py  scoreboard.py  telegram.py  tusd_hooks.py  webhook.py
tests/: conftest.py  factories.py  test_admin.py  test_analytics.py  test_auth.py  test_list_matches.py  test_match_crud.py  test_match_files.py  test_player_notes.py  test_screenshots.py  test_user_isolation.py  test_webhook.py
(+2 files in other folders)
